navbar and hero

--- a/index.html
+++ b/index.html
@@ -5,13 +5,118 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home</title>
   <link rel="stylesheet" href="/style.css"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 <body>
   <header>
-    <img/>
-    <nav>
-    </nav>
-    <img/>
+    <span class="top-header">Stay connected with events >></span>
+    <div>
+      <span class="bottom-header">Watch Live</span>
+      <div class="navbar">
+        <div class="logo">
+          <img src="/assets/logo.png" alt="logo" />
+          <span class="logo-text">
+            <p style="font-weight: 800;">Delight</p>
+            <p>of God</p>
+            <p>Ministry</p>
+          </span>
+        </div>
+      <nav>
+        <ul>
+          <li>
+            <a href="">Home</a>
+          </li>
+          <li>
+            <a href="">About</a>
+          </li>
+          <li>
+            <a href="">Service</a>
+          </li>
+          <li>
+            <a href="">Books</a>
+          </li>
+          <li>
+            <a href="">Testimony</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="navbar-btn">
+        <a  href="">
+          <button class="msg-btn">MESSAGES</button>
+        </a>
+        <a href="">
+          <button class="give-btn">GIVE</button>
+        </a>
+        <img/>
+      </div>
+    </div>
+    </div>
+    <div class="hero">
+      <div class="hero-titles">
+        <h3>Loving radically, living generously</h3>
+        <h1>Watching jesus do<br> the extraordinary</h1>
+      </div>
+      <a href="tel:+233241198953">
+        <button>CONTACT US</button>
+      </a>
+      <div class="socials">
+        <a href="https://youtube.com/@johnmarkNdukwe?feature=shared" target="_blank">
+          <i class="fa-brands fa-youtube"></i>
+        </a>
+        <a href="https://www.facebook.com/Delicia.de.Dios?mibextid=LQQJ4d" target="_blank">
+          <i class="fa-brands fa-facebook-f"></i>
+        </a>
+        <a href="https://instagram.com/pastormarkministry?igshid=MzRlODBiNWFlZA==" target="_blank">
+          <i class="fa-brands fa-instagram"></i>
+        </a>
+      </div>
+    </div>
   </header>
+  <main>
+    <div class="section">
+      <div class="section-cols">
+        <div class="about-img">
+          <img src="/assets/about.JPG" alt="about image" style="width: 700px;"/>
+        </div>
+        <div>
+          <h1>About Us</h1>
+          <p>
+            Welcome to Delight of God Ministry! We are a vibrant and diverse community dedicated to spreading the love, grace, and teachings of Jesus Christ. Our mission is to create a welcoming space where people from all walks of life can come together to worship, learn, and grow in their faith.
+  
+            Our mission is to create a welcoming space where people from all walks of life can come together to worship, learn, and grow in their faith. At Delifht of God ministry we believe that faith is a journey, and we`re here to support you every step of the way. Our church isn't just a place for Sunday worship; it's a community that extends beyond our sanctuary walls. These connections provide a space to deepen your understanding of God's word, foster meaningful relationships, and find encouragement in your faith journey. Whether it's volunteering at a local shelter, participating in mission trips, or supporting those in need, we believe in living out our faith through actions of love and compassion.
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="section service">
+      <div class="service-cards">
+        <div>
+          <h3>Bible Studies</h3>
+          <h3>Mondays</h3>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas, impedit.</p>
+        </div>
+        <div>
+          <h3>Bible Studies</h3>
+          <h3>Tuesdays</h3>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas, impedit.</p>
+        </div>
+        <div>
+          <h3>Bible Studies</h3>
+          <h3>Wednessdays</h3>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas, impedit.</p>
+        </div>
+        <div>
+          <h3>Bible Studies</h3>
+          <h3>Fridays</h3>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas, impedit.</p>
+        </div>
+        <div>
+          <h3>Bible Studies</h3>
+          <h3>Sundays</h3>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas, impedit.</p>
+        </div>
+      </div>
+    </div>
+  </main>
 </body>
 </html>
