books section and style improvements

--- a/index.html
+++ b/index.html
@@ -89,31 +89,67 @@
       </div>
     </div>
     <div class="section service">
+      <h1>Service</h1>
       <div class="service-cards">
         <div>
           <h3>Bible Studies</h3>
-          <h3>Mondays</h3>
+          <h4>Monday</h4>
           <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas, impedit.</p>
         </div>
         <div>
           <h3>Bible Studies</h3>
-          <h3>Tuesdays</h3>
+          <h4>Wednessday</h4>
           <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas, impedit.</p>
         </div>
         <div>
           <h3>Bible Studies</h3>
-          <h3>Wednessdays</h3>
+          <h4>Friday</h4>
           <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas, impedit.</p>
         </div>
         <div>
           <h3>Bible Studies</h3>
-          <h3>Fridays</h3>
+          <h4>Saturday</h4>
           <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas, impedit.</p>
         </div>
         <div>
           <h3>Bible Studies</h3>
-          <h3>Sundays</h3>
+          <h4>Sunday</h4>
           <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas, impedit.</p>
+        </div>
+      </div>
+    </div>
+    <div class="section books">
+      <h1>Books</h1>
+      <div class="books-cards">
+        <div>
+          <img src="/assets/corruption.jpg" alt="" />
+          <h3>Corruption and bloodshed</h3>
+          <p>With themes of betrayal, redemption, and the cost of one's choices, 'Corruption and Bloodshed' delves into the darkest corners of human nature. As the body count rises and alliances shift, the characters must confront their own inner demons while striving to bring justice to a world tainted by the stench of corruption.</p>
+        </div>
+        <div>
+          <img src="/assets//contemporary.jpg" alt="" />
+          <h3>Contemporary letters for the edification of souls</h3>
+          <p>Enter a world where timeless wisdom meets modern challenges in Contemporary Letters for the Edification of Souls. This collection of thought-provoking letters bridges the gap between the age-old quest for meaning and the complexities of our fast-paced, interconnected world.</p>
+        </div>
+        <div>
+          <img src="/assets/prayer wrestling.jpg" alt="" />
+          <h3>Prayer wrestling</h3>
+          <p>Through the lens of Prayer Wrestling, readers are invited to witness the transformative power of vulnerability and the deep connection that can be forged through open-hearted communication. As the protagonist navigates the complex landscape of faith, they discover that sometimes the most profound moments of growth emerge from the very struggle to understand and connect with the divine.</p>
+        </div>
+        <div>
+          <img src="/assets/activating.jpg" alt="" />
+          <h3>Activating the power of God</h3>
+          <p>Through profound revelations and practical exercises, Activating the Power of God demonstrates that this power is not limited to a select few, but is available to all who are willing to embark on the journey of self-discovery and spiritual growth. The book reveals how aligning ones intentions, thoughts, and actions with divine principles can lead to remarkable shifts in personal and spiritual well-being</p>
+        </div>
+        <div>
+          <img src="/assets/gods-perfect.jpg" alt="" />
+          <h3>Gods perfect plan</h3>
+          <p>Gods Perfect Plan delves into themes of faith, patience, and surrender as the characters grapple with the tension between their desires and the divine timeline. From heartbreak to redemption, the story showcases how setbacks can lead to unforeseen blessings and how moments of doubt can ultimately strengthen ones connection to the divine.</p>
+        </div>
+        <div>
+          <img src="/assets/Mirror-2.jpeg" alt="" />
+          <h3>The Mirror</h3>
+          <p>The mirror becomes a symbol of self-examination and spiritual growth, reflecting the journey of a soul seeking alignment with its Creator. With each turn of the page, readers are prompted to peel back the layers of pretense and embrace vulnerability, acknowledging both their divine identity and their need for grace.</p>
         </div>
       </div>
     </div>
